@@ -2,6 +2,6 @@
 
 __all__ = ["addon", "addonsettings", "backtothefuture", "channelinfo", "chn_class", "cloaker",
            "contextmenu", "envcontroller", "environments", "favourites", "initializer", "locker",
-           "logger", "mediaitem", "menu", "paramparser", "parserdata", "pickler", "plugin",
+           "logger", "mediaitem", "menu", "parserdata", "pickler", "plugin",
            "proxyinfo", "regexer", "retroconfig", "updater", "urihandler", "vault", "version",
            "xbmcwrapper", "player"]
